first attempt at abstract

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -15,7 +15,21 @@
 
 % Abstract - % directly after { is important for correct indentation
 \AtlasAbstract{%
-  This is a bare bones ATLAS document. Put the abstract for the document here.
+A search for new resonance decays producing a pair of jets is
+performed using 139~\ifb of ATLAS \pp collision data recorded from the
+Large Hadron Collider operating at $\sqrt{s} = 13$~TeV. 
+To increase the sensitivity to observe new resonances preferentially
+decaying to one or more gluons, a gluon-tag method based on the number
+of associated particle tracks is employed.
+No significant excess of events above a smoothly falling dijet
+background distribution is observed.
+The results are used to set cross-section upper limits at the 95\%
+confidence level for signal-gluon and double-gluon tagged jets
+originating from new resonance decays.
+Model-dependent string scale lower limits are set on string resonances
+which predominantly decay to a gluon and quark, and mass lower limits
+on a massive colour-singlet scalar particle decaying exclusively to
+two gluons.  
 }
 
 % Author - this does not work with revtex (add it after \begin{document})
