Update appendix.tex to add global fit studies appendix

--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -20,3 +20,6 @@
 
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
+
+% Global Fit Studies Vs SWiFt
+\input{include/app-GlobalFitStudies.tex}
