--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -891,4 +891,14 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
       url           = "https://cds.cern.ch/record/2646455",
 }
 
+
+@Booklet{ATL-COM-PHYS-2018-161,
+    author         = "{ATLAS Collaboration}",
+    title          = "{SWiFt Sliding Window Fit Method for Resonance Searches}",
+    howpublished   = "{ATL-COM-PHYS-2018-161}",
+    url            = "https://cds.cern.ch/record/2305523",
+    year           = "2018",
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
