Update app-GlobalFitStudies.tex, test

--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -26,7 +26,7 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty.pdf}
-    \caption{Statistical uncertainty on a 5 parameter dijet fit function fit using MINUIT2 with string resonance cuts to inclusive $|y*|<0.8$ data.}
+    \caption{Scaling per bin between a distribution rescaled by bin width to produce a plot of Events / GeV in each bin and a plot of raw events. The raw events case is scaled down by 151 to make it equal to Events / GeV in the 7904-8055 GeV bin for comparison. It can be seen that rescaling by bin width introduces a change in shape affecting the lower $m_{jj}$ region more, and there are noticeable unsmooth jumps in the shape particularly at low $m_{jj}$ which is due to the requirement of integer bin widths.}
     \label{fig:BinningShapeAdjustment}
 \end{figure}
 
