--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -25,8 +25,8 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty.pdf}
-    \caption{Scaling per bin between a distribution rescaled by bin width to produce a plot of Events / GeV in each bin and a plot of raw events.}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/BinningShapeAdjustment.pdf}
+    \caption{Scaling per bin between a distribution}
     \label{fig:BinningShapeAdjustment}
 \end{figure}
 
