--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -26,7 +26,7 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 \begin{figure}
     \centering
     \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/BinningShapeAdjustment.pdf}
-    \caption{Scaling per bin between a distribution}
+    \caption{Statistical uncertainty on a 5 parameter dijet fit function fit using MINUIT2 with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:BinningShapeAdjustment}
 \end{figure}
 
