--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -25,11 +25,10 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/BinningShapeAdjustment.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty.pdf}
     \caption{Statistical uncertainty on a 5 parameter dijet fit function fit using MINUIT2 with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:BinningShapeAdjustment}
 \end{figure}
-
 
 \begin{figure}
   \hspace{-3.3cm}
