--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -25,7 +25,7 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_Uncertainty.pdf}
     \caption{Statistical uncertainty on a 5 parameter dijet fit function fit using MINUIT2 with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:BinningShapeAdjustment}
 \end{figure}
@@ -34,13 +34,13 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
   \hspace{-3.3cm}
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_NoRescalingProcedure.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf}
     \caption{Fitted events per bin}
     \label{fig:sub15ParamGlobalFitBinRescaleComparison}
   \end{subfigure}%
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf}
     \caption{Fitted events / GeV per bin via bin rescaling procedure.}
     \label{fig:sub25ParamGlobalFitBinRescaleComparison}
   \end{subfigure}
@@ -63,7 +63,7 @@ The statistical uncertainty on the 5 parameter dijet fit function globally fitte
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_Uncertainty.pdf}
     \caption{Statistical uncertainty on a 5 parameter dijet fit function fit using MINUIT2 with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:5ParamStatisticalUncertainty}
 \end{figure}
@@ -74,7 +74,7 @@ The MINUIT2 minimizer is used as standard, the statistical uncertainty of the 5 
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0.8_Uncertainty_MINUIT.pdf}
+    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_Uncertainty_MINUIT.pdf}
     \caption{Statistical uncertainty on a 5 parameter dijet fit function global fit using MINUIT with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:5ParamMINUITComparison}
 \end{figure}
@@ -87,7 +87,7 @@ The statistical uncertainty found on the fit using SWiFt instead of global fitti
 
 \begin{figure}
     \centering
-    \includegraphics[width=1.0\linewidth]{figures/app-GlobalFitStudies/5ParamSWiFtFit_ystar0.8_Uncertainty.pdf}
+    \includegraphics[width=1.0\linewidth]{figures/app-GlobalFitStudies/5ParamSWiFtFit_ystar0p8_Uncertainty.pdf}
     \caption{Statistical uncertainty on a 5 parameter dijet fit function SWiFt fit with string resonance cuts to inclusive $|y*|<0.8$ data.}
     \label{fig:SWiFtStatisticalUncertaintyYstar0.8}
 \end{figure}
@@ -106,13 +106,13 @@ This same procedure was performed for each individual year of running (2015,2016
   \hspace{-3.3cm}
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.8_BumpHunterSignifcance.pdf}
+    \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf}
     \caption{SWiFt background fit}
     \label{fig:sub1ystar0.8FullRunBHFits}
   \end{subfigure}%
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.8_BumpHunterSignifcance.pdf}
+    \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf}
     \caption{Global background fit}
     \label{fig:sub2ystar0.8FullRunBHFits}
   \end{subfigure}
@@ -125,12 +125,12 @@ This same procedure was performed for each individual year of running (2015,2016
   \hspace{-3.3cm}
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.8_BumpHunterPValue.pdf}
+    \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf}
     \label{fig:sub1ystar0.8FullRunBHPvalue}
   \end{subfigure}%
   \begin{subfigure}{.8\linewidth}
     \centering
-    \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.8_BumpHunterPValue.pdf}
+    \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf}
     \caption{Global background fit}
     \label{fig:sub2ystar0.8FullRunBHPvalue}
   \end{subfigure}
