Update app-GlobalFitStudies.tex, remove implied zeros

--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -32,13 +32,13 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf}
     \caption{Fitted events per bin}
     \label{fig:sub15ParamGlobalFitBinRescaleComparison}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf}
     \caption{Fitted events / GeV per bin via bin rescaling procedure.}
@@ -104,13 +104,13 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf}
     \caption{SWiFt background fit}
     \label{fig:sub1ystar0.8FullRunBHFits}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf}
     \caption{Global background fit}
@@ -123,12 +123,12 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf}
     \label{fig:sub1ystar0.8FullRunBHPvalue}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf}
     \caption{Global background fit}
@@ -141,13 +141,13 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.6_BumpHunterSignifcance.pdf}
     \caption{SWiFt background fit}
     \label{fig:sub1ystar0.6FullRunBHFits}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.6_BumpHunterSignifcance.pdf}
     \caption{Global background fit}
@@ -160,12 +160,12 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.6_BumpHunterPValue.pdf}
     \label{fig:sub1ystar0.6FullRunBHPvalue}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.6_BumpHunterPValue.pdf}
     \caption{Global background fit}
@@ -177,13 +177,13 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}
   \hspace{-3.3cm}
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=5 8 14 30, clip,width=1.0\linewidth,height=8cm]{figures/app-GlobalFitStudies/VariousYearsFitsAt1Fb_SWiFtYstar0.6.pdf}
     \caption{SWiFt background fit}
     \label{fig:sub1ystar0.6IndividualFits}
   \end{subfigure}%
-  \begin{subfigure}{.8\linewidth}
+  \begin{subfigure}{0.8\linewidth}
     \centering
     \includegraphics[trim=5 8 14 30, clip,width=1.0\linewidth,height=8cm]{figures/app-GlobalFitStudies/VariousYearsFitsAt1FbYstar0.6.pdf}
     \caption{Global background fit}
