--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -30,20 +30,12 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
     \label{fig:BinningShapeAdjustment}
 \end{figure}
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf}
-    \caption{Fitted events per bin}
-    \label{fig:sub15ParamGlobalFitBinRescaleComparison}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[width=1\linewidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf}
-    \caption{Fitted events / GeV per bin via bin rescaling procedure.}
-    \label{fig:sub25ParamGlobalFitBinRescaleComparison}
-  \end{subfigure}
+
+
+\begin{figure}[!htb]
+  \centering
+  \subfigure[Fitted events per bin]{ \label{fig:sub15ParamGlobalFitBinRescaleComparison} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf} }
+  \subfigure[Fitted events / GeV per bin via bin rescaling procedure.]{ \label{fig:sub25ParamGlobalFitBinRescaleComparison} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf} }
   \caption{string resonance cuts inclusive $|y*|<0.8$ data fitted using MINUIT2 with a 5 parameter dijet fit function, both globally fitting the measured data in events per bin and performing the bin rescaling procedure. The measured $\frac{\chi^{2}}{nDoF}$ of the fit is improved via this bin rescaling procedure by a factor of 20 from 1617/80 to 63.4/80.}
   \label{fig:5ParamGlobalFitBinRescaleComparison}
 \end{figure}
