--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -94,93 +94,52 @@ The same was done using instead the H' cuts with $|y*|<0.6$, significance shown 
 This same procedure was performed for each individual year of running (2015,2016,2017,2018), producing the fits shown in Figure \ref{fig:ystar0.6IndividualFits}, showing that the fits per year are more consistent especially at high $m_{jj}$ in the global fitting case than the SWiFt case, as expected due to the lower statistical uncertainty in the fit which explains the larger significances with global fitting in the higher $m_{jj}$ bins, as the SWiFt fit varies per year, neglecting 2015 which has too low statistics for meaningful comparison, around the 8 TeV region by as large as $\approx$ 70\%, while the global fit only varies by $\approx 5\%$. Hence, the lower significance in this region in the SWiFt case is due to the larger statistical uncertainty in the SWiFt fit, and the global fit significance for these bins is more reliable.
 
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf}
-    \caption{SWiFt background fit}
-    \label{fig:sub1ystar0.8FullRunBHFits}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf}
-    \caption{Global background fit}
-    \label{fig:sub2ystar0.8FullRunBHFits}
-  \end{subfigure}
+
+
+
+
+
+\begin{figure}[!htb]
+  \centering
+  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.8FullRunBHFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf} }
+  \subfigure[Global background fit]{ \label{fig:sub2ystar0.8FullRunBHFits} \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf} }
   \caption{significance per bin calculated using BumpHunter for string resonance cuts inclusive $|y*|<0.8$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent significance plots between SWiFt and global fitting.}
   \label{fig:ystar0.8FullRunBHFits}
 \end{figure}
 
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf}
-    \label{fig:sub1ystar0.8FullRunBHPvalue}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf}
-    \caption{Global background fit}
-    \label{fig:sub2ystar0.8FullRunBHPvalue}
-  \end{subfigure}
+\begin{figure}[!htb]
+  \centering
+  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.8FullRunBHPvalue} \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf} }
+  \subfigure[Global background fit]{ \label{fig:sub2ystar0.8FullRunBHPvalue} \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf} }
   \caption{BumpHunter p-values calculated using BumpHunter for string resonance cuts inclusive $|y*|<0.8$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent p-values between SWiFt and global fitting.}
   \label{fig:ystar0.8FullRunBHPvalue}
 \end{figure}
 
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[width=1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.6_BumpHunterSignifcance.pdf}
-    \caption{SWiFt background fit}
-    \label{fig:sub1ystar0.6FullRunBHFits}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=35 2 10 30, clip,width=1.1\linewidth,height=7cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.6_BumpHunterSignifcance.pdf}
-    \caption{Global background fit}
-    \label{fig:sub2ystar0.6FullRunBHFits}
-  \end{subfigure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6FullRunBHFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterSignifcance.pdf} }
+  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6FullRunBHFits} \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterSignifcance.pdf} }
   \caption{significance per bin calculated using BumpHunter for H' cuts inclusive $|y*|<0.6$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent significance plots between SWiFt and global fitting at low $m_{jj}$, but significantly larger significances are observed in the global fit at high $m_{jj}$.}
   \label{fig:ystar0.6FullRunBHFits}
 \end{figure}
 
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=0 0 0 20, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamSwiftYStar0.6_BumpHunterPValue.pdf}
-    \label{fig:sub1ystar0.6FullRunBHPvalue}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=10 2 35 35, clip,width=1.0\linewidth,height=6cm]{figures/app-GlobalFitStudies/5ParamGlobalYStar0.6_BumpHunterPValue.pdf}
-    \caption{Global background fit}
-    \label{fig:sub2ystar0.6FullRunBHPvalue}
-  \end{subfigure}
+
+\begin{figure}[!htb]
+  \centering
+  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6FullRunBHPvalue} \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterPValue.pdf} }
+  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6FullRunBHPvalue} \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterPValue.pdf} }
   \caption{BumpHunter p-values calculated using BumpHunter for H' cuts inclusive $|y*|<0.6$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing a large difference between the p-value obtained with SWiFt than with global fitting.}
   \label{fig:ystar0.6FullRunBHPvalue}
 \end{figure}
 
-\begin{figure}
-  \hspace{-3.3cm}
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=5 8 14 30, clip,width=1.0\linewidth,height=8cm]{figures/app-GlobalFitStudies/VariousYearsFitsAt1Fb_SWiFtYstar0.6.pdf}
-    \caption{SWiFt background fit}
-    \label{fig:sub1ystar0.6IndividualFits}
-  \end{subfigure}%
-  \begin{subfigure}{0.8\linewidth}
-    \centering
-    \includegraphics[trim=5 8 14 30, clip,width=1.0\linewidth,height=8cm]{figures/app-GlobalFitStudies/VariousYearsFitsAt1FbYstar0.6.pdf}
-    \caption{Global background fit}
-    \label{fig:sub2ystar0.6IndividualFits}
-  \end{subfigure}
+\begin{figure}[!htb]
+  \centering
+  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6IndividualFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1Fb_SWiFtYstar0p6.pdf} }
+  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6IndividualFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1FbYstar0p6.pdf} }
   \caption{Background fit for each year of running in both SWiFt and global fitting, normalized to 1 fb$^{-1}$.}
   \label{fig:ystar0.6IndividualFits}
 \end{figure}
