first version of executive summary

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -92,7 +92,14 @@
 
 % List of contributors - print here or after the Bibliography.
 %\PrintAtlasContribute{0.30}
-%\clearpage
+\clearpage
+
+%-------------------------------------------------------------------------------
+\section{Executive Summary}
+\label{sec:executive}
+\input{include/00-executive.tex}
+\clearpage
+%-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 \section{Introduction}
