--- a/include/01-introduction.tex
+++ b/include/01-introduction.tex
@@ -1,16 +1,26 @@
+Many models of physics beyond the Standard Model (SM) predict the
+existence of new heavy particles which couple to quarks and/or
+gluons. 
+Such heavy particles could be produced in proton\text{--}proton
+collisions at the Large Hadron Collider (LHC) and then decay into
+quarks and gluons, creating two hadronic jets in the detector. 
+In the SM, dijet events are produced mainly by quantum chromodynamics
+(QCD) processes. 
+QCD predicts dijet events with a smoothly decreasing invariant mass
+distribution, \mjj. 
+A new particle decaying into quarks or gluons could appears instead as
+a resonance in the \mjj spectrum.  
+
+A search for new physics in the dijet mass distribution was performed
+using $\sqrt{s} = 13$~\TeV\xspace data collected between years 2015 and
+2018 \cite{Aad:2019hjw}. 
+%with the  95\% CL lower limits on the masses given in Table~\ref{tab:Limits2018}. 
+Most of the strategies and methods of the analysis presented here are
+mostly unchanged with respect to the previous iterations of the
+analysis, which can be reviewed in great detail in the internal note
+~\cite{Nishu:2646455}. 
 
 \todo[inline]{To write about updated statistical framework.} 
-
-Many models of physics beyond the Standard Model (SM) predict the existence of new heavy particles which couple to quarks and/or gluons.
-Such heavy particles could be produced in proton\text{--}proton collisions at the Large Hadron Collider (LHC) and then decay into quarks and 
-gluons, creating two energetic jets in the detector. In the SM, dijet events are produced mainly by quantum chromodynamics (QCD) processes. QCD 
-predicts dijet events with a smoothly decreasing invariant mass distribution, \mjj. A new particle decaying into quarks or gluons would emerge 
-instead as a resonance in the \mjj spectrum.
-
-A search for new physics in the dijet mass distribution was performed on 13~\TeV\xspace data collected between years 2015 and 2018 \cite{Aad:2019hjw}
- with the  95\% CL lower limits on the masses given in Table~\ref{tab:Limits2018}. 
-Most of the strategies and methods of the analysis are mostly unchanged with respect to the previous iterations of the analysis,
-which can be reviewed in great detail in the internal note ~\cite{Nishu:2646455}.
 
 %For these reasons, searches in dijet events are often amongst of the first searches done when a hadron
 %collider reaches a new energy frontier\footnote{See Ref.~\cite{Harris:2011bh} for a review of the history
@@ -23,31 +33,34 @@ which can be reviewed in great detail in the internal note ~\cite{Nishu:2646455}
 %8 to 13~\TeV\xspace dramatically enhances parton luminosities at multi-\TeV\xspace energies
 %(Fig.~\ref{fig:partonluminosity}) and thus the production rates of potential high-mass signals.
 
-\begin{table}[htbp]
-  \caption{The lower limits on the masses of benchmark signals at 95\% CL from \cite{Aad:2019hjw}.}
-  \centering
-  \begin{tabular}{l|c|c|c}
-    \hline\hline
-    \multirow{2}{*}{Category} & \multirow{2}{*}{Model} & \multicolumn{2}{c}{Lower limit on signal mass at 95\% CL} \\ 
-    & & Observed & Expected \\\hline
-    \multirow{6}{*}{Inclusive} & $q^*$ & 6.7~\TeV\ & 6.4~\TeV\  \\
-    & QBH & 9.4~\TeV\  & 9.4~\TeV\ \\
-    & \Wprime & 4.0~\TeV\ & 4.2~\TeV\  \\
-    & $W^*$   & 3.9~\TeV\ & 4.1~\TeV\ \\
-    & DM mediator \Zprime, $g_\text{q}=0.20$ & 3.8~\TeV\ & 3.8~\TeV\ \\
-    & DM mediator \Zprime, $g_\text{q}=0.50$ & 4.6~\TeV\ & 4.9~\TeV\ \\\hline
-  \end{tabular}
-  \label{tab:Limits2018}
-\end{table}
+%\begin{table}[htbp]
+%  \caption{The lower limits on the masses of benchmark signals at 95\% CL from \cite{Aad:2019hjw}.%}
+%  \centering
+%  \begin{tabular}{l|c|c|c}
+%    \hline\hline
+%    \multirow{2}{*}{Category} & \multirow{2}{*}{Model} & \multicolumn{2}{c}{Lower limit on signal %mass at 95\% CL} \\ 
+%    & & Observed & Expected \\\hline
+%    \multirow{6}{*}{Inclusive} & $q^*$ & 6.7~\TeV\ & 6.4~\TeV\  \\
+%    & QBH & 9.4~\TeV\  & 9.4~\TeV\ \\
+%    & \Wprime & 4.0~\TeV\ & 4.2~\TeV\  \\
+%    & $W^*$   & 3.9~\TeV\ & 4.1~\TeV\ \\
+%    & DM mediator \Zprime, $g_\text{q}=0.20$ & 3.8~\TeV\ & 3.8~\TeV\ \\
+%    & DM mediator \Zprime, $g_\text{q}=0.50$ & 4.6~\TeV\ & 4.9~\TeV\ \\\hline
+%  \end{tabular}
+%  \label{tab:Limits2018}
+%\end{table}
 
-If the resonant data sample can be separated  based on the type of  parton that initiated the jets the 
-sensitivity of the search should be significantly increased. The fraction of events as a function of 
+If the resonant data sample can be divided based on the type of
+parton that initiated the jets, the sensitivity of the search for some
+rescounaces could be increased. 
+The fraction of events as a function of  
 the dijet mass from QCD  simulated with a  \textsc{Pythia~8.186}~\cite{pythia8} and the leading-order NNPDF2.3~\cite{Ball:2012cx} 
 parton distribution functions (PDFs) is shown in Fig.~\ref{fig:quarkgluonfraction}. 
 This suggests that tagging quark and gluon jets should be able to improve the sensitivity of searches for new particles. 
 ATLAS has published a study \cite{ATL-PHYS-PUB-2017-009} showing that jets can be tagged as quark or gluon jets 
 based on the number of charged particles with transverse momentum (\pt ) above 500\,MeV. 
-In this note we present the analysis for the whole combined 2015 and 2016 13~\TeV\xspace dataset using quark 
+In this note we present the analysis for the whole combined 2015 and
+2016 $\sqrt{s} = 13$~\TeV\xspace dataset using quark 
 and gluon tagging  based on charged-particle constituent multiplicity.
 
 \todo[inline]{Update Fig 1 with dijet fractions nicer plot...}
