--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -171,7 +171,7 @@
 
 %-------------------------------------------------------------------------------
 \section{``Quark-Gluon'' Resonance Search Sensitivity}
-\label{sec:QGselection}
+\label{sec:QGsensitivity}
 \input{include/QGsensitivity.tex}
 %\clearpage
 %-------------------------------------------------------------------------------
