fixed undefined references

--- a/include/01-introduction.tex
+++ b/include/01-introduction.tex
@@ -105,7 +105,7 @@ data are compatible with a background expectation.
 A localized excess (i.e. a bump) on the smooth \mjj\  distribution
 is the target of the resonance analysis.
 The background model is derived from a fit to the \mjj\ distribution.
-The background estimation strategy is described in Section~\ref{sec:background_estimation}.
+%The background estimation strategy is described in Section~\ref{sec:background_estimation}.
 A description of systematic uncertainties will be added to 
 Sections~\ref{sec:systematic_uncertainties}. 
 %In case either method observes a significant excess, additional tests in the search phase
@@ -122,8 +122,8 @@ to constrain a set of signals.
 % \item Limits on hadronically decaying \Wprime .
 % \item Limits on hadronically decaying \Wstar .
 % \item Limits on dark-matter inspired \Zprime\ models.
-The techniques and tools used for the limit setting are described in
-Section~\ref{sec:limits}. 
+%The techniques and tools used for the limit setting are described in
+%Section~\ref{sec:limits}. 
 %The systematic uncertainties considered on the benchmark signals are
 %detailed in Section~\ref{sec:systematics_signal}.
 %Each of the following sections clarifies what is consistent
