--- a/include/08-LimitTechniques.tex
+++ b/include/08-LimitTechniques.tex
@@ -51,14 +51,16 @@ This is compared to hours or days using the Bayesian approach for very similar r
 This form of analysis is applicable to all resonant phenomena
 where the new physics resonance couplings are strong compared to the scale of perturbative QCD
 at the signal mass, so that interference with QCD terms can be neglected.
-The acceptance calculation includes all reconstruction steps and analysis cuts is
-described in Section~\ref{sec:res_selection}.
+The acceptance calculation includes all reconstruction steps and analysis cuts.
+%is described in Section~\ref{sec:res_selection}.
 
 The background prediction used in this calculation is obtained from a
 simultaneous S+B fit.
 
 The effects of the systematic uncertainties on the data-driven background together with the systematic uncertainties
-on the signal samples, described in Section~\ref{sec:systematicUncertainties}, are considered in the limit-setting procedure.
+on the signal samples
+%, described in Section~\ref{sec:systematicUncertainties}, 
+are considered in the limit-setting procedure.
 These uncertainties are incorporated into the LH formalism by varying all sources according
 to Gaussian probability distributions.
 %The templates are linearly interpolated
@@ -71,4 +73,5 @@ In order to validate the limit setting machinery, results have been compared
 with
 the Bayesian limits used in previous iteration of the analysis. In addition, a
 validation of the asymptotic approximation has been checked comparing limits
-derived from toys. Both studies are described in Appendix~\ref{sec:HF_val}.
+derived from toys. 
+%Both studies are described in Appendix~\ref{sec:HF_val}.
