--- a/include/QGsensitivity.tex
+++ b/include/QGsensitivity.tex
@@ -4,7 +4,7 @@ particles that decay to gluon-gluon and possible improvements in searches that i
 final state. In both cases the optimal search is by selecting only on the gluon initiated jets with a 
 nominal efficiency of 75\%.  
 
-The choice of operating pint will be confirmed by using pseudo-data (Section~\ref{sec:pseudo}) to test 
+The choice of operating point will be confirmed by using pseudo-data to test 
 the selection efficiency by 
 running the fitting and limit setting procedure of samples generated with selection efficiencies ranging from 
 65 to 90\% in 5\% steps. 
