fixed new commands in abstract

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -16,7 +16,7 @@
 % Abstract - % directly after { is important for correct indentation
 \AtlasAbstract{%
 A search for new resonance decays producing a pair of jets is
-performed using 139~\ifb of ATLAS \pp collision data recorded from the
+performed using 139~fb$^{-1}$ of ATLAS $pp$ collision data recorded from the
 Large Hadron Collider operating at $\sqrt{s} = 13$~TeV. 
 To increase the sensitivity to observe new resonances preferentially
 decaying to one or more gluons, a gluon-tag method based on the number
