intro and executive summary now according to latest template

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -4,7 +4,8 @@
 %-------------------------------------------------------------------------------
 
 % Title
-\AtlasTitle{Search for new phenomena in dijet events using quark gluon tagging based on track multiplicty}
+\AtlasTitle{Search for new phenomena in dijet events using quark/gluon
+tagging based on track multiplicty} 
 
 % Draft version:
 % Should be 1.0 for the first circulation, and 2.0 for the second circulation.
