--- a/include/00-executive.tex
+++ b/include/00-executive.tex
@@ -40,7 +40,7 @@ predicted by many models beyond the SM of particle physics.
 
 The analysis strategy is somewhat different than previous dijet searches
 and is common with the TLA analysis.
-Previous ATLAS dijet searched used a two stage approach.
+Previous ATLAS dijet searches used a two stage approach.
 First, the dijet invariant mass distribution was scanned for
 significant deviations above a smoothly falling background; the so
 called search phase.
@@ -75,19 +75,19 @@ some of the gluon/quark tagged studies.
 We aim to obtain the following results from the analysis.
 
 \begin{itemize}
-\item Search for high-mass resonance in the inclusive, single-gluon tagged,
-  and double-gluon tagged dijet system.
+\item Search for high-mass resonances in the inclusive, single-gluon tagged,
+  and double-gluon tagged dijet systems.
 \item If nature is willing, claim something interesting, else set of
   limits. 
 \item Set model independent upper-limits on resonance cross sections for
-  inclusive, single-gluon tagged, and double-gluon tagged dijet system.
+  inclusive, single-gluon tagged, and double-gluon tagged dijet systems.
 \item For the string resonance model, set lower limits on the string
   scale for inclusive, single-gluon tagged, and double-gluon tagged
-  dijet system. Hopefully, demonstrating the best sensitivity for
+  dijet systems; hopefully, demonstrating the best sensitivity for
   single-gluon tagging.
 \item For the H$^\prime$ resonance model, set lower limits on the
   resonance mass for inclusive, single-gluon tagged, and double-gluon
-  tagged dijet system. Hopefully, demonstrating the best sensitivity
+  tagged dijet systems; Hopefully, demonstrating the best sensitivity
   for  double-gluon tagging.
 \end{itemize}
 
@@ -99,21 +99,21 @@ We aim to obtain the following results from the analysis.
 \begin{tabular}{llll}\hline
 Task & Analyzer & Role & Other responsibilities\\\hline
 Milestone 1\\
-\color{red}{Generation dijet invariant mass pseudo-distribution} & many & many & others\\
-\color{red}{Perform S+B fitting of pseudo-data}                  & many & many & others\\
-\color{green}{Unblinding}                                        &
+\color{red}{Generation dijet invariant mass pseudo-distributions} & many & many & others\\
+\color{red}{Perform S+B fitting of pseudo-data}                   & many & many & others\\
+\color{green}{Unblinding}                                         &
 many & many & others\\
 \hline
 Milestone 2\\
-\color{red}{Perform S+B fitting of data}                         & many & many & others\\
-\color{green}{Decision to claim discover or set limits}          & many & many & others\\
+\color{red}{Perform S+B fitting of data}                          & many & many & others\\
+\color{green}{Decision to claim discover or set limits}           & many & many & others\\
 \hline
 Miletone 3\\
-\color{red}{Set model-independent limits}                        & many & many & others\\
-\color{red}{Set model-dependent limits}                          & many & many & others\\
+\color{red}{Set model-independent limits}                         & many & many & others\\
+\color{red}{Set model-dependent limits}                           & many & many & others\\
 \hline
 Milestone 4\\
-\color{green}{Write paper}                                       & many & many & others\\
+\color{green}{Write paper}                                        & many & many & others\\
 \hline
 \end{tabular}
 \end{table}
