--- a/include/04-QGselection.tex
+++ b/include/04-QGselection.tex
@@ -1,3 +1,23 @@
+If the resonant data sample can be divided based on the type of
+parton that initiated the jets, the sensitivity of the search for some
+rescounaces could be increased. 
+The fraction of events as a function of  
+the dijet mass from QCD  simulated with a  \textsc{Pythia~8.186}~\cite{pythia8} and the leading-order NNPDF2.3~\cite{Ball:2012cx} 
+parton distribution functions (PDFs) is shown in Fig.~\ref{fig:quarkgluonfraction}. 
+This suggests that tagging quark and gluon jets should be able to improve the sensitivity of searches for new particles. 
+ATLAS has published a study \cite{ATL-PHYS-PUB-2017-009} showing that jets can be tagged as quark or gluon jets 
+based on the number of charged particles with transverse momentum (\pt ) above 500\,MeV. 
+In this note we present the analysis for the whole combined 2015 and
+2016 $\sqrt{s} = 13$~\TeV\xspace dataset using quark 
+and gluon tagging  based on charged-particle constituent multiplicity.
+
+\todo[inline]{Update Fig 1 with dijet fractions nicer plot...}
+\begin{figure}[htb]
+ \centering
+\includegraphics[width=0.75\textwidth]{figures/introduction/truthCompositionRatio.pdf}
+\caption{The fraction of dijet events that are initiated by quark-quark events (blue), quark-gluon 
+events (green) and gluon-gluon events (red) in simulated data.  \label{fig:quarkgluonfraction}}
+\end{figure}
 
 It has been shown that the number of charged particles with transverse
 momentum (\pT ) above 500\,MeV, \ntrk, associated with a jet can be used
