string acceptance plot added

--- a/include/02-benchmark_signals.tex
+++ b/include/02-benchmark_signals.tex
@@ -190,6 +190,16 @@ curve.
 For the $8.5 \leq \Ms \leq 9.0$~TeV samples, we truncate at a lower-mass
 value that covers 95\% of the area under the Breit-Wigner curve.
 
+The acceptance times efficiency for inclusive, signal-gluon and double-gluon 
+tagged selection is shown in Fig.~\ref{fig:strings_acc}
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=0.48\textwidth]{benchmark_signals/acceptance_strings}
+\caption{String sample acceptance versus string scale for the
+inclusive, single-gluon tag, and double-gluon tag selection.\label{fig:strings_acc}}
+\end{figure}
+
 Five possible $2\to 2$ subprocesses that can give rise to string
 resonances are simulated.
 The cross section for each subprocess is a function of \Ms, and thus the
